# rustic-insights

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml
examples/: prometheus_push_client.rs
grafana/: example-dashboard.json
grafana/provisioning/dashboards/: application-metrics-dashboard.json  dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
prometheus/: prometheus.yml
src/: api.rs  config.rs  errors.rs  lib.rs  main.rs  metrics.rs  utils.rs
src/api/: handlers.rs  models.rs  routes.rs
src/metrics/: collector.rs  registry.rs  types.rs
src/utils/: validation.rs
tests/: api_tests.rs  metrics_tests.rs
